--- a/src/app/App.css
+++ b/src/app/App.css
@@ -33,10 +33,10 @@
   right: -4px;
   top: 0;
   width: 100vw;
-  background: url("/pattern.png");
-  height: 300%;
-  transform: translate(100%, -50%);
-  opacity: 0.1;
+  background: url("/pattern2.png"), no-repeat url("/ice-right.svg") top left,
+    var(--background);
+  height: 100%;
+  transform: translate(100%, 0);
 }
 
 .content::before {
@@ -45,10 +45,10 @@
   left: -4px;
   top: 0;
   width: 100vw;
-  background: url("/pattern.png");
-  height: 300%;
-  transform: translate(-100%, -50%);
-  opacity: 0.1;
+  background: url("/pattern2.png"), no-repeat url("/ice-left.svg") top right,
+    var(--background);
+  height: 100%;
+  transform: translate(-100%, 0);
 }
 
 .footer {
