--- a/src/intro/Intro.css
+++ b/src/intro/Intro.css
@@ -3,11 +3,17 @@
   flex-direction: column;
   text-align: center;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   z-index: 1;
   height: 100%;
   padding-top: 6vw;
   padding-bottom: 50px;
+}
+
+.top-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -15,25 +21,25 @@
   margin-bottom: 22px;
 }
 
-.subtitle {
+.intro .subtitle {
   font-size: 24px;
   color: var(--text-neutral);
   margin-bottom: 22px;
+  width: 65%;
+  text-align: center;
 }
 
 .description {
   font-size: 24px;
-
   color: var(--text-color);
   margin-bottom: 48px;
-  padding: 0 50px;
+  width: 65%;
 }
 
 .instruction {
   font-size: 24px;
 
   color: var(--text-color);
-  flex: 1;
   display: flex;
   align-items: flex-end;
   padding: 0 30px;
@@ -42,11 +48,23 @@
 @media (min-width: 780px) {
   .description,
   .instruction,
-  .subtitle {
-    font-size: 40px;
+  .intro .subtitle {
+    font-size: 26px;
+  }
+
+  .logo {
+    width: 400px;
   }
 
   .instruction {
     padding: 0 150px;
+  }
+
+  .intro .subtitle {
+    width: 55%;
+  }
+
+  .description {
+    width: 55%;
   }
 }
